<resources>
    <string name="app_name">My Application</string>
    <string name="app_title">BMI Calculator</string>
    <string name="random1">Male</string>
    <string name="random2">Female</string>
    <string name="random3">Age</string>
    <string name="x">x</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="division">/</string>
    <string name="modulus">%</string>
    <string name="brackets">()</string>
    <string name="c">C</string>
    <string name="dot">.</string>
    <string name="equals_to">=</string>
    <string name="_0">0</string>
    <string name="negate">+/-</string>
    <string name="add">+</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="subtract">-</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>

</resources>